add reset button, attempt throwing error

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ html {
     background-size: cover;
 }
 body {
-    height: 450px;
-    width: 50%;
+    height: 59vh;
+    width: 49%;
     border: 3px solid #BFA89E;
     box-shadow: 3px 5px #8B786D;
     background-color: #EBF5EE;
